--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,100 +2,28 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout1"
-        android:layout_marginLeft="10pt"
-        android:layout_marginRight="10pt"
-        android:layout_marginTop="3pt">
+    android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <EditText
-            android:layout_weight="1"
+            android:hint="todays number"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5pt"
             android:id="@+id/etNum1"
-            android:layout_width="match_parent"
-            android:inputType="numberDecimal">
+            android:layout_width="wrap_content"
+            android:inputType="number">
+
         </EditText>
+
         <EditText
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+
             android:layout_marginLeft="5pt"
             android:id="@+id/etNum2"
-            android:layout_width="match_parent"
-            android:inputType="numberDecimal">
+            android:layout_width="wrap_content"
+            android:inputType="number">
         </EditText>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout2"
-        android:layout_marginTop="3pt"
-        android:layout_marginLeft="5pt"
-        android:layout_marginRight="5pt">
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:text="+"
-            android:textSize="8pt"
-            android:id="@+id/btnAdd">
-        </Button>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:text="-"
-            android:textSize="8pt"
-            android:id="@+id/btnSub">
-        </Button>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:text="*"
-            android:textSize="8pt"
-            android:id="@+id/btnMult">
-        </Button>
-        <Button
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:text="/"
-            android:textSize="8pt"
-            android:id="@+id/btnDiv">
-        </Button>
 
-    </LinearLayout>
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="5pt"
-        android:layout_marginRight="5pt"
-        android:textSize="12pt"
-        android:layout_marginTop="3pt"
-        android:id="@+id/tvResult"
-        android:gravity="center_horizontal">
-    </TextView>
 
-    <EditText
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="5pt"
-        android:id="@+id/etNum3"
-        android:layout_width="match_parent"
-        android:inputType="numberDecimal">
 
-    </EditText>
-
-    <EditText
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="5pt"
-        android:id="@+id/etNum4"
-        android:layout_width="match_parent"
-        android:inputType="numberDecimal"/>
 
 </LinearLayout>
